--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 	    "laravelcollective/html": "~5.0",
-		"fzaninotto/faker": "^1.5"
+		"fzaninotto/faker": "^1.5",
+        "mnsami/composer-custom-directory-installer": "1.0.*",
+        "lartificer/contactform": "dev-master",
+        "lartificer/news": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
@@ -47,5 +50,11 @@
 	},
 	"config": {
 		"preferred-install": "dist"
-	}
+	},
+    "extra": {
+      "installer-paths": {
+        "./workbench/lartificer/news/": ["lartificer/news"],
+        "./workbench/lartificer/contactform/": ["lartificer/contactform"]
+      }
+    }
 }
